added update for every frame

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@ canvas tag is used to draw graphics -->
     <script type="text/javascript" src= "./js/Overworld.js"></script>
     <script type="text/javascript" src= "./js/Sprite.js"></script>
     <script type="text/javascript" src= "./js/GameObject.js"></script>
+    <script type="text/javascript" src= "./js/OverWorldMap.js"></script>
     <script type="text/javascript" src= "./js/init.js"></script>
   </body>
 </html>
